@@ -13,25 +13,21 @@ set -e
 dodir /etc/postinstall /etc/preremove
 
 cat >> ${D}/etc/postinstall/${PN}.sh <<-_EOF
-	/usr/bin/gconftool-2 --shutdown
-	/bin/kill -SIGKILL \$(pidof /usr/sbin/gconfd-2)
-	/bin/rm -fr \$TMP/gconfd-*
+	export GCONF_CONFIG_SOURCE="xml::/etc/gconf/gconf.xml.defaults"
 	_EOF
 
 cat >> ${D}/etc/preremove/${PN}.sh <<-_EOF
-	/usr/bin/gconftool-2 --shutdown
-	/bin/kill -SIGKILL \$(pidof /usr/sbin/gconfd-2)
-	/bin/rm -fr \$TMP/gconfd-*
+	export GCONF_CONFIG_SOURCE="xml::/etc/gconf/gconf.xml.defaults"
 	_EOF
 
 for schema in ${D}/etc/gconf/schemas/*.schemas
 do
 	cat >> ${D}/etc/postinstall/${PN}.sh <<-_EOF
-		GCONF_CONFIG_SOURCE="xml::/etc/gconf/gconf.xml.defaults" /usr/bin/gconftool-2 --makefile-install-rule /etc/gconf/schemas/${schema##*/} > /dev/null 2>&1
+		/usr/bin/gconftool-2 --makefile-install-rule /etc/gconf/schemas/${schema##*/} > /dev/null 2>&1
 		_EOF
 
 	cat >> ${D}/etc/preremove/${PN}.sh <<-_EOF
-		GCONF_CONFIG_SOURCE="xml::/etc/gconf/gconf.xml.defaults" /usr/bin/gconftool-2 --makefile-uninstall-rule /etc/gconf/schemas/${schema##*/} > /dev/null 2>&1
+		/usr/bin/gconftool-2 --makefile-uninstall-rule /etc/gconf/schemas/${schema##*/} > /dev/null 2>&1
 		_EOF
 done
 
